@@ -1,4 +1,4 @@
-URL: http://code.google.com/p/libphonenumber/
-Version: 7.0.1 (r729)
+URL: https://github.com/googlei18n/libphonenumber
+Version: 7.0.2 (8109d4a)
 License: Apache 2
 Description: Google Phone Number Library.
